[tool.poetry]
name = "cabbage_news"
version = "0.1.0"
description = ""
authors = ["searchableguy <me@searchableguy.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.17.0"}
sanic = "^21.12.1"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.29"}
aiosqlite = "^0.17.0"
marshmallow-sqlalchemy = "^0.27.0"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
beautifulsoup4 = "^4.10.0"
vaderSentiment = "^3.3.2"
gunicorn = "^20.1.0"


[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
